# medgemma-tb

./: .gitattributes  .gitignore  AGENTS.md  README.md  main.py  overview.md  pyproject.toml  results.md
docs/: medsiglip_comprehensive_report.md  medsiglip_overview.md  path-foundation-get.md  path-foundation-overview.md
medsiglip/: model.safetensors
official-google/: fine_tune_with_hugging_face.py  google-official-quick-start.py  train_data_efficient_classifier.py
results/: image_check_errors.txt  image_check_report.csv
results/baseline_zero_shot/: baseline_image_status.csv  baseline_metrics.json  baseline_predictions.csv  baseline_run_summary.json
results/linear_probe_anemia_full/: artifacts.npz  linear_probe.pt  metrics.json  test_image_status.csv  train_image_status.csv
results/linear_probe_anemia_status_smoke/: test_image_status.csv  train_image_status.csv
src/: auto-pil.py  quick_start_with_hugging_face.py  run_medsiglip_local.py  train_linear_probe_anemia.py
src/baseline/: baseline-model-evaluation.py  baseline-model-running.py
src/full-eye/: test.csv  val.csv
src/full-training/: test.csv  train.csv  val.csv
src/helpers/: create_optimized_csv.py  image_checking.py  plotting.py  regenerate_csv.py
src/main/: test.csv  train.csv  val.csv
src/optimized/: linear_probe_tuned.py
src/segmented/: build_segmented_splits.py  test.csv  train.csv  val.csv
