[project]
name = "medgemma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "opencv-python-headless>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pillow>=10.0.0",
    "protobuf>=5.28.0",
    "scikit-learn>=1.5.0",
    "sentencepiece>=0.2.0",
    "tensorflow>=2.16.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.52.4,<5.0.0",
    "wandb>=0.25.0",
]
